heading alignment corrected

--- a/client/styles/Navbar.module.css
+++ b/client/styles/Navbar.module.css
@@ -22,8 +22,7 @@ align-items: center;
 border: 1px solid #e1e2e5;
 border-radius: 20px;
 overflow: hidden;
-margin-top: 20%;
-margin-bottom: 10%;
+margin-top: 15%;
 /* box-shadow: 0 0 5px #FBC91B */
 }
 .searchContainer:hover,
@@ -33,10 +32,8 @@ margin-bottom: 10%;
 }
 @media (min-width: 900px) {
     .searchContainer{
-        width: 30%;
-        margin-left: 40%;
-        margin-top: 0;
-        margin-bottom: 0;
+        width: 30%;margin-top: 5%;
+      
         
     }
     .searchInput{
